# minimax_tool

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README.zh-CN.md  docker-compose.pg18.yml  docker-compose.yml
backend/: main.py  pyproject.toml
backend/app/: config.py  crypto.py  database.py  main.py  models.py  schemas.py  security.py
backend/app/routers/: configs.py  generate.py  health.py  history.py  key_providers.py  media.py  secrets.py  translate.py
backend/app/services/: generator.py  translate.py
backend/app/utils/: files.py
backend/scripts/: check_video_template_render.py  debug_video.py  debug_voice.py  fix_seed_default_params.py  fix_seed_models.py  fix_video_parser.py  fix_video_template.py  fix_voice_parser.py  init_db.py
backend/tests/: test_security.py
config/: database.pg18.yaml.example  database.yaml.example
docs/: ARCHITECTURE.md  DEPLOY.md  SECURITY.md  USAGE.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  theme.tsx
frontend/src/api/: client.ts
frontend/src/pages/: ConfigCenter.tsx  History.tsx  Secrets.tsx  Studio.tsx  Translate.tsx
frontend/src/pages/configForms/: CommonFields.tsx  ConfigForm.tsx  ImageForm.tsx  MusicForm.tsx  VideoForm.tsx  VoiceForm.tsx  constants.ts  templateBuilders.ts  (+1 more)
frontend/src/styles/: index.css
frontend/src/types/: index.ts
scripts/: build_frontend.sh  fix-seeds.sh  serve.sh  smoke.py  smoke_docker.py  start_backend.sh
uploads/: .gitkeep
