[project]
name = "minimax-tool-backend"
version = "0.1.0"
description = "Local web tool to call MiniMax APIs (image / voice / music / video)"
readme = "../README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "asyncpg>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "cryptography>=43.0.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.12",
    "anyio>=4.6.0",
    "tenacity>=9.0.0",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
